metallbfiles/test_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: metallb-system
spec:
  ingressClassName: nginx
  rules:
  - host: "test.collearn.cn"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
